...
                    ],
                  ),
                ),
              ],
            ),
          ),
          const LinearProgressIndicator(key: Key('runProgress')),
          Padding(
            padding: const EdgeInsets.all(24),
            child: Column(
              children: [
                for (final step in _steps)
                  Padding(
...
